<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/func_desc"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/descrip_main_func"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/valor1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/func_desc"
        app:layout_constraintLeft_toLeftOf="@id/func_desc"
        app:layout_constraintRight_toRightOf="@+id/func_desc"
        android:padding="16dp"
        android:hint="@string/v1"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/valor2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/valor1"
        app:layout_constraintLeft_toLeftOf="@id/func_desc"
        app:layout_constraintRight_toRightOf="@+id/func_desc"
        android:padding="16dp"
        android:hint="@string/v2"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/valor2"
        app:layout_constraintStart_toStartOf="@id/valor2"
        app:layout_constraintEnd_toEndOf="@id/valor2"
        android:paddingTop="16dp">

    <RadioButton
        android:id="@+id/Radio_sumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/valor2"
        app:layout_constraintTop_toBottomOf="@id/valor2"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sumar"
        android:checked="false"/>

        <RadioButton
        android:id="@+id/Radio_restar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/valor2"
        app:layout_constraintTop_toBottomOf="@id/Radio_sumar"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/restar"
        android:checked="false"/>

    </RadioGroup>

    <TextView
        android:id="@+id/result_descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        app:layout_constraintLeft_toLeftOf="@id/func_desc"
        app:layout_constraintTop_toBottomOf="@id/RGroup"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/result_oper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintLeft_toLeftOf="@id/func_desc"
        app:layout_constraintTop_toBottomOf="@id/result_descrip"
        android:paddingTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


    <Button
        android:id="@+id/boton_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/teal_200"
        android:keyboardNavigationCluster="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
